--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sogouda"
-version = "0.1.0-alpha"
+version = "0.1.0-alpha.1"
 edition = "2021"
 description = "♥ Create lightweight desktop apps using HTML/CSS/JS ♥"
 license = "MPL-2.0"
@@ -10,7 +10,7 @@ authors = ["Ashelynne Juniper <support@ashejuniper.com>"]
 
 [lib]
 name = "sogaouda"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 doc = true
 bench = false
 edition = "2021"
